<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/pureWhite"
            android:layout_height="match_parent"
    >

        <include
                layout="@layout/top_logo"
                android:id="@+id/include"/>

        <com.example.bdfuv.custom_view.PaddingTextView
                android:padding="@dimen/dp16"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/welcome"
                style="@style/creme_initial"
                app:myfont="@string/font_nivea_creme_initial"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp8"
                app:layout_constraintTop_toBottomOf="@+id/include"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:id="@+id/titleTextView"/>

        <com.example.bdfuv.custom_view.FontButton
                android:foreground="@drawable/round_button"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/connect"
                app:theme="@style/AppTheme.MangoButton"
                android:background="@drawable/test_button"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/button_margin_start"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/button_margin_start"
                android:layout_marginBottom="18dp" app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/connectButton"/>

        <com.example.bdfuv.custom_view.FontButton
                android:visibility="invisible"
                android:foreground="@drawable/round_button"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/my_continue"
                app:theme="@style/AppTheme.LightBlueButton"
                android:background="@drawable/light_blue_button"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/button_margin_start"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/button_margin_start"
                android:layout_marginBottom="18dp" app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/continueButton"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>