<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:background="@color/pureWhite"
            android:layout_height="match_parent"
    >

        <include
                layout="@layout/top_logo"
                android:id="@+id/include"/>

        <TextView
                android:padding="@dimen/dp16"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/measurement_complete"
                style="@style/text_light"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/include"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:id="@+id/textView5"/>


        <TextView
                android:paddingStart="@dimen/dp16"
                android:paddingEnd="@dimen/dp16"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/please_press_next"
                style="@style/text_light"
                android:gravity="center"
                android:id="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintBottom_toTopOf="@+id/continueButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>


        <com.example.bdfuv.custom_view.FontButton
                android:foreground="@drawable/round_button"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/my_continue"
                app:theme="@style/AppTheme.LightBlueButton"
                android:background="@drawable/light_blue_button"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/button_margin_start"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/button_margin_start"
                android:layout_marginBottom="18dp" app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/continueButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>