<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:background="@color/pureWhite"
            android:layout_height="match_parent"
    >

        <include
                layout="@layout/top_logo"
                android:id="@+id/include"/>

        <TextView
                android:padding="@dimen/dp8"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/apply_uv_sensor"
                style="@style/text_light"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/include"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:id="@+id/textView5"/>

        <TextView
                android:paddingStart="@dimen/dp16"
                android:paddingEnd="@dimen/dp16"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/press"
                style="@style/text_light"
                android:gravity="end"
                android:id="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintBottom_toTopOf="@+id/textView17"
                app:layout_constraintVertical_chainStyle="packed" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/twoStateIndicator"
                app:layout_constraintHorizontal_chainStyle="packed"/>

        <TextView
                android:paddingStart="@dimen/dp16"
                android:paddingEnd="@dimen/dp16"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/to"
                style="@style/text_light"
                android:gravity="start"
                android:id="@+id/textView15"
                app:layout_constraintStart_toEndOf="@+id/twoStateIndicator"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/twoStateIndicator"
                app:layout_constraintBottom_toBottomOf="@+id/twoStateIndicator"/>

        <TextView
                android:paddingStart="@dimen/dp16"
                android:paddingEnd="@dimen/dp16"
                android:layout_height="wrap_content"
                android:layout_width="379dp"
                android:text="@string/repeat_measurement"
                style="@style/text_light"
                android:gravity="center"
                android:id="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:layout_constraintBottom_toTopOf="@+id/okButton" app:chainUseRtl="false"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintVertical_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintEnd_toEndOf="@+id/textView15"/>


        <com.example.bdfuv.custom_view.TwoStateIndicator
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/twoStateIndicator"
                app:isDone="true"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView15"
                app:layout_constraintTop_toTopOf="@+id/textView11"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"/>


        <com.example.bdfuv.custom_view.FontButton
                android:foreground="@drawable/round_button"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="ok"
                app:theme="@style/AppTheme.DarkBlueButton"
                android:background="@drawable/dark_blue_button"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/button_margin_start"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/button_margin_start"
                android:layout_marginBottom="18dp" app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/okButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>